# cmake-sparsehash

./: .gitignore  CHANGELOG.md  CMakeLists.txt  sparseconfig.h.in
i/include/sparsehash/internal/: sparseconfig.h
i/lib/cmake/SparseHash/: SparseHashConfig.cmake  SparseHashConfigVersion.cmake  SparseHashTargets.cmake
src/sparsehash/internal/: hashtable-common.h
srcs/: main.cpp
